syntax = "proto3";

package admin;

option go_package = "admin_service/internal/proto/admin;adminpb";

service AdminService {
    rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
}